--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# tmux-continuum
+set -g @continuum-restore 'on'
+
 # tmux-yank
 set -g @plugin 'tmux-plugins/tmux-yank'
 
