fix for vim colorscheme inside tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set-option -g repeat-time 0
 
 # set 256-bit color as default
 set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # smart pane switching with awareness of vim splits
 bind h select-pane -L
