--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# unbind Ctrl-s
+unbind C-s
+
+# key binding to toggle synchronize input to panes
+bind C-y set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+
 # tmux-plugins
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
 set -g @plugin 'tmux-plugins/tpm'
