change tmux sync panes shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ bind l select-pane -R
 unbind C-s
 
 # key binding to toggle synchronize input to panes
-bind C-y set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+bind i set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # tmux-plugins
 set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
