--- a/.gitconfig
+++ b/.gitconfig
@@ -6,3 +6,5 @@
 	editor = vim
 [alias]
 	tree = log --graph --decorate --pretty=oneline --abbrev-commit
+	abranch = !git checkout $1 && git switch develop && git tag archive/$1 $1 && git branch -D $1 && git push -d origin $1 && git push --tags && :
+	rbranch = !git checkout -b $1 archive/$1 && :
