acp alias update

--- a/.gitconfig
+++ b/.gitconfig
@@ -30,7 +30,7 @@
 	dc = diff --cached
 
 	# Feature improving aliases
-	acp = !git add --all && git commit -m "$1" && git push && :
+	acp = !git add --all && git commit -m \"$1\" && git push && :
 	rank = shortlog -sn --no-merges
 	alias = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
 
