respawn-pane shortcut

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# shortcut to respawn/reset a pane
+bind r respawn-pane -k
+
 # unbind Ctrl-s
 unbind C-s
 
