--- a/.inputrc
+++ b/.inputrc
@@ -1,30 +1,5 @@
-# Set the default readline mode as vi
 set editing-mode vi
-
-# Show the vi mode indicators
 set show-mode-in-prompt on
 set keyseq-timeout 0
-# The following is a little hard to understand
-# a full example omiting the wrapping \1 and \2
-#
-# \e[     (open sequence: ESC CSI)
-# 48;5;   (specifies 256 bg)
-# 2       (bg color)
-# m       (end)
-# 1;      (bold)
-# 38;5;   (specifies 256 fg)
-# 0       (fg color)
-# m       (end)
-# COMMAND (some text to display)
-# \e[     (open sequence)
-# 0       (reset)
-# m       (end)
-# \e[     (open sequence)
-# 0       (cursor type)
-# q       (end)
-
-# Configures the cmd mode display
 set vi-cmd-mode-string "\1\e[48;5;2m\2\1\e[1;38;5;0m\2 N \1\e[0m\2 \1\e[0 q\2"
-
-# Configures the ins mode display
-set vi-ins-mode-string "\1\e[48;5;4m\2\1\e[1;38;5;0m\2 I \1\e[0m\2 \1\e[6 q\2"ETURN: "\e\n"
+set vi-ins-mode-string "\1\e[48;5;4m\2\1\e[1;38;5;0m\2 I \1\e[0m\2 \1\e[6 q\2"
