add tmux keybind for clearing screen via C-l

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# terminal clear screen
+bind C-l send-keys 'C-l'
+
 # turn on mouse
 set -g mouse on
 
