--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ bind C-l send-keys 'C-l'
 # turn on mouse
 set -g mouse on
 
+# turn off clipboard
+set-option -g set-clipboard off
+
 # no delay between switching panes
 set-option -g repeat-time 0
 
