--- a/.gitconfig
+++ b/.gitconfig
@@ -2,31 +2,61 @@
 	name = Kenny Chen
 	email = kennyjchen@ucla.edu
 	username = kennyjchen
-    signingKey = 89D26BECC9B44BEE
+    	signingKey = 89D26BECC9B44BEE
+
 [core]
 	editor = nvim
 	excludesFile = ~/.gitignore_global
+	filemode = false
+
 [commit]
-    gpgSign = true
+    	gpgSign = true
+
 [color]
 	ui = auto
+
 [alias]
-	# Shortening aliases
-    aa = add --all
-    ap = add --patch
-	cp = "!f() { git commit -m \"$1\" && git pull --rebase && git push; }; f"
-	d = diff
-    dc = diff --cached
-	st = status -sb
-	rv = remote -v
-    rh = reset --hard
 
 	# Feature improving aliases
 	rank = shortlog -sn --no-merges
-    untracked = status --short --untracked-files
-    aliases = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
+    	untracked = status --short --untracked-files
+    	aliases = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
 
 	# Log
-    lg = log --graph --color --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %s %C(dim white)<%an>%Creset %C(bold yellow)%d%C(reset)'
-    lga = log --all --graph --color --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %s %C(dim white)<%an>%Creset %C(bold yellow)%d%C(reset)'
+    	lg = log --graph --color --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %s %C(dim white)<%an>%Creset %C(bold yellow)%d%C(reset)'
+    	lga = log --all --graph --color --abbrev-commit --decorate --pretty=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %s %C(dim white)<%an>%Creset %C(bold yellow)%d%C(reset)'
 
+	# Shortening aliases
+	c = checkout
+	ch = checkout
+	chm = checkout master
+	cm = commit
+	cam = commit --amend
+	s = status
+	b = branch
+	ba = branch -a
+	t = tag
+	p = pull
+	prb = pull --rebase
+	a = add -A
+	f = fetch
+	sh = show
+	d = diff
+	dfl = diff --name-only
+	db = branch -d
+	dbo = push origin --delete
+	cp = cherry-pick
+	cpn = cherry-pick --no-commit
+	flist = ls-tree -r --name-only HEAD
+	untrack = rm -r --cached
+	ap = apply --ignore-space-change --ignore-whitespace
+	l = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short -10
+	la = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+	lb = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --first-parent -10
+	lba = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --first-parent
+	lmy = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --author=Chabanov -10
+	lamy = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short --author=Chabanov
+	log3 = log -n 3
+	log5 = log -n 5
+	log10 = log -n 10
+	files = ls-tree -r --name-only HEAD
