--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,9 @@ bind-key C-a send-prefix
 # terminal clear screen
 bind C-l send-keys 'C-l'
 
+# kill session
+bind q confirm-before "kill-session"
+
 # turn on mouse
 set -g mouse on
 
