--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ bind q confirm-before "kill-session"
 set -g mouse on
 
 # turn off clipboard
-set-option -g set-clipboard off
+set-option -g set-clipboard on
 
 # no delay between switching panes
 set-option -g repeat-time 0
